--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title> JavaScript Adventure Game <a href=https://en.wikipedia.org/wiki/Hello_world_program> Hello, World </a></title>
 </head> 
 <body>
-<p> this page is under construction </p>
+<p> This page is under construction </p>
 </body>
 </html>
