--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head> <script>
-<title> JavaScript Adventure Game <a href=https://en.wikipedia.org/wiki/Hello_world_program> Hello, World </a></title>
-</head> 
+<head> <h1> This is my Hello World </h1>
+<script>
+function myFunction()
+{
+alert("Hello World!");
+}
+</script>
+</head>
+
 <body>
-<p> This page is under construction </p>
+<button onclick="myFunction()">Try it</button>
 </body>
 </html>
